# sibela-project

./: CMakeLists.txt  build.ps1  main.c
components/ui/: legend.c  legend.h
constants/: color.h
data/: jadwalMurid.c  jadwalMurid.h  jadwalPertemuan.c  jadwalPertemuan.h  mapel.c  mapel.h  materi.c  materi.h  murid.c  murid.h  pengajar.c  pengajar.h  ruangan.c  ruangan.h  staf.c  staf.h
libs/: handleInput.c  handleInput.h  login.c  login.h  utils.c  utils.h
model/: model.h  window.h  windows.c
types/: dbTypes.h  form.h
update/: update.c  update.h
views/: Loading.c  Loading.h  drawView.c  drawView.h  homeView.c  homeView.h  landingView.c  loginView.c  memberView.c  memberView.h
views/home/muridHome/: muridHome.c  muridHome.h
views/home/muridHome/components/murid/: create.c  create.h  read.c  read.h  update.c  update.h
views/home/pengajarHome/: pengajarHome.c  pengajarHome.h
views/home/pengajarHome/components/Materi/: create.c  create.h  read.c  read.h  update.c
views/home/staffHome/: staffHome.c  staffHome.h
views/home/staffHome/components/jadwal/: create.c  read.c  update.c
views/home/staffHome/components/mapel/: create.c  create.h  read.c  read.h  update.c  update.h
views/home/staffHome/components/murid/: create.c  read.c
views/home/staffHome/components/pengajar/: create.c  create.h  read.c  read.h  update.c  update.h
views/home/staffHome/components/ruangan/: create.c  create.h  read.c  read.h
views/home/staffHome/components/staff/: create.c  create.h  read.c  read.h  update.c  update.h
